export enum PauseScreenSelectors {
    Root = 'PauseScreenSelectors.Root',
    UkraineCta = 'PauseScreenSelectors.UkraineCta',
    DetailsValue = 'PauseScreenSelectors.DetailsValue',
    ProgressValue = 'PauseScreenSelectors.ProgressValue',
    TimeValue = 'PauseScreenSelectors.TimeValue',
    ScoreValue = 'PauseScreenSelectors.ScoreValue',
    MistakesValue = 'PauseScreenSelectors.MistakesValue',
    ResumeButton = 'PauseScreenSelectors.ResumeButton',
    ShareButton = 'PauseScreenSelectors.ShareButton',
    QuitButton = 'PauseScreenSelectors.QuitButton'
}
