appId: ${APP_ID}
---
- runFlow: subflows/navigation/launch-home.flow.yaml
- runFlow: subflows/navigation/open-daily.flow.yaml
- assertVisible:
      id: 'DailyScreenSelectors.ActionButton'
      text: '.*Play today.*'
- tapOn:
      id: 'DailyScreenSelectors.ActionButton'
- extendedWaitUntil:
      visible:
          id: 'GameScreenSelectors.Root'
      timeout: 15000
- runFlow: subflows/game/quit-current-game.flow.yaml
